[gd_scene load_steps=5 format=2]

[ext_resource path="res://Quest/QuestSlots.gd" type="Script" id=1]
[ext_resource path="res://Content/UI/small_quest_slot.png" type="Texture" id=2]
[ext_resource path="res://Characters/CharIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Content/UI/medium_quest_slot.png" type="Texture" id=4]

[node name="QuestSlots" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="small_quest_slot" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 2 )
centered = false

[node name="CharIcon" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 20.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon2" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 58.8001, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon3" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 96.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon4" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 134.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon5" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 172.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon6" parent="small_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 210.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="medium_quest_slot" type="Sprite" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, -38 )
texture = ExtResource( 4 )
centered = false

[node name="CharIcon1" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 20.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon2" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 58.8001, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon3" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 96.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon4" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 134.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon5" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 172.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon6" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 210.8, 16.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon7" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 20.8, 53.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon8" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 58.8001, 53.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon9" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 96.8, 53.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon10" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 134.8, 53.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon11" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 172.8, 53.8 )
scale = Vector2( 0.095, 0.095 )

[node name="CharIcon12" parent="medium_quest_slot" instance=ExtResource( 3 )]
position = Vector2( 210.8, 53.8 )
scale = Vector2( 0.095, 0.095 )
